changes' is much more useful than 'misc edits' or 'code cleanup'.
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

Patch by Jeffry Hantin which fixes glow objects in map.
insert_ob_in_map_simple now will call the appropriate light updating code.
Applied by MSW 6/26/2000

server/player.c: check_pick():  Rewrite of this function to consistently
skip items that can't be picked up, and to only use a single loop over all
items on the map square.  - Jan Echternach 6/23/2000

------------------------------------------------------------------------------
Changes for 0.95.6:

server/monster.c:  Patch by Neil Muller so that corrupt/bad @match entries
will not cause the server to crash.  Applied by MSW 6/21/2000

lib/archetypes: rebuilt for 0.95.6
lib/collect.pl:  Modify to search the archetypes directories in alphabetical
order - before I believe they were collected in basically inode order.
This should make it easier to multiple people to run the collect script
not have basically an entirely new archetyeps file.  MSW 6/21/2000

server/commands.c; server/c_object.c: dump_object_from_tag():  Removed
broken command.  Fixes server crashes very easily triggered by players.
- Jan Echternach 6/21/2000

server/attack.c: deathstrike_player():  Check for def_lev == 0 very early
(and print error message if we find such an invalid level).  Should fix
server crash in case archetypes or maps get broken again in that an
alive object has level < 1.  - Jan Echternach 6/21/2000

Makefile.in: Update version to 0.95.6
include/patchlevel.h: Update to .6 for 0.95.6 release
common/porting.c, include/config.h, include/loader.h, include/skills.h, 